--- a/listings/templates/upload_listing.html
+++ b/listings/templates/upload_listing.html
@@ -146,7 +146,7 @@
       </div>
     </div>
 
-    <!-- Feture Status -->
+    <!-- Feature Status -->
     <div style="width: 100%; height: 30px; border: 1px; border-color: black; margin-top: 5px; margin-bottom: 5px;">
       <div style="width: 100%; height: 100%; background-color: white; float: left;"> 
         <div style="margin-left: 10px; float: left;"><p style="color: black">{{ listing_form.property_feature_status }}  Feature this property?</p></div>
