--- a/templates/base.html
+++ b/templates/base.html
@@ -60,10 +60,10 @@
               <a class="nav-link" href="/listings"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">Explore Properties</button></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">About Us</button></a>
+              <a class="nav-link" href="/about"><button type="button" class="btn btn-light" id="aboutus_nav" style="background-color: #CCCCCC">About Us</button></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/area"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">Explore Omaha</button></a>
+              <a class="nav-link" href="/area"><button type="button" class="btn btn-light" id="explore_nav" style="background-color: #CCCCCC">Explore Omaha</button></a>
             </li>
           </ul>
         </div>
